<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register3Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_32"/>

        <TextView
            style="@style/baseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:padding="@dimen/dp_4"
            android:text="@string/sex"
            android:textDirection="ltr"
            android:textSize="@dimen/text_size_norm" />

        <RadioGroup
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp_24">

            <RadioButton
                android:id="@+id/radioWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_72"
                android:text="@string/woman"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_huge"/>

            <RadioButton
                android:id="@+id/radioMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_huge"/>
        </RadioGroup>

        <TextView
            style="@style/baseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:padding="@dimen/dp_4"
            android:text="@string/date_of_birth"
            android:textDirection="ltr"
            android:textSize="@dimen/text_size_norm" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                tools:text="@string/cm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                tools:text="@string/kg" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/targetField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/targetInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/target"
                tools:text="@string/kg" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/baseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:padding="@dimen/dp_12"
            android:text="@string/create_an_account"
            android:textDirection="ltr"
            android:textSize="@dimen/text_size_large"
            android:layout_gravity="right"/>




        </LinearLayout>



</ScrollView>
