<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.AddBodyMeasurmentsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_48"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true">

        <TextView
            style="@style/baseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_4"
            android:padding="@dimen/dp_4"
            android:text="@string/enter_your_measurements"
            android:textDirection="ltr"
            android:textSize="@dimen/text_size_norm"
            android:layout_gravity="center"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:padding="@dimen/dp_4"
                android:text="@string/select_date"
                android:textDirection="ltr"
                android:textSize="@dimen/text_size_norm" />

            <TextView
                android:id="@+id/dateOfMeas"
                style="@style/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:padding="@dimen/dp_4"
                android:text="@string/date"
                android:textDirection="ltr"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/dp_24"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceWeightField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceWeightInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                tools:text="@string/kg"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceArmField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceArmInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circumference_arm"
                tools:text="@string/cm"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceCalfField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceCalfInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circumference_calf"
                tools:text="@string/cm"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceChestField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceChestInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circumference_chest"
                tools:text="@string/cm"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceHipField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceHipInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circumference_hip"
                tools:text="@string/cm"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceThighField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceThighInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circumference_thigh"
                tools:text="@string/cm"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/circumferenceWaistField"
            style="@style/inputLayer"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/circumferenceWaistInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/circumference_waist"
                tools:text="@string/cm"
                android:numeric="integer"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAddNewBodyMeas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:src="@drawable/ic_add"
                />

            <TextView
                android:id="@+id/textAddBodyMeadurments"
                style="@style/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_a_body_meas"
                android:textSize="@dimen/text_size_huge"
                android:paddingLeft="@dimen/dp_16"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>