<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingStart="18dp"
    android:paddingEnd="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <!--        do poprawy-->
            <!--        -->
            <TextView
                android:id="@+id/tv_searchItemName"
                style="@style/baseText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/productName"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_huge"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_add"
                android:id="@+id/but_addProducttoMeal"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_searchItemQuantity"
                style="@style/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_48"
                android:text="@string/quantity"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_searchItemCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/dp_12"
                android:text="@string/calories_in_pro"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additionalInfoLinLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_searchItemInfoCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tv_searchItemInfoPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tv_searchItemInfoFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tv_searchItemInfoCarbo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbohydrates"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginBottom="@dimen/dp_12"
                />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>